kubernetes/applications/media/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: ghcr.io/fallenbagel/jellyseerr:v2.7.3
        ports:
        - name: http
          containerPort: 5055
        volumeMounts:
        - name: config
          mountPath: /app/config
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: overseerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5055
    targetPort: 5055
  selector:
    app: overseerr
